# java/lance-catalog-springboot-server/src/main/java/com/lancedb/lance/catalog/server/springboot/api/TableApi.java
@@ -13,6 +13,7 @@
  */
 package com.lancedb.lance.catalog.server.springboot.api;
 
+import com.lancedb.lance.catalog.server.springboot.model.CreateTableRequest;
 import com.lancedb.lance.catalog.server.springboot.model.ErrorResponse;
 import com.lancedb.lance.catalog.server.springboot.model.GetTableResponse;
 import com.lancedb.lance.catalog.server.springboot.model.RegisterTableRequest;
@@ -46,6 +47,183 @@ public interface TableApi {
 
   default Optional<NativeWebRequest> getRequest() {
     return Optional.empty();
+  }
+
+  /**
+   * POST /v1/namespaces/{ns}/tables : Create a table in the catalog Create a new Lance table in the
+   * catalog. There are three modes when trying to create a table: * CREATE: Create the table if it
+   * does not exist. If a table of the same name already exists, the operation fails with 400. *
+   * EXIST_OK: Create the table if it does not exist. If a table of the same name already exists,
+   * the operation succeeds and the existing table is kept. * OVERWRITE: Create the table if it does
+   * not exist. If a table of the same name already exists, the existing table and all data is
+   * dropped and a new table with this name with no data is created. The server might create the
+   * table using a library and writer version that is different from the one in the user
+   * environment. The server is responsible for rejecting the request if the table created by the
+   * server cannot be properly used by the client library and writer version.
+   *
+   * @param ns The name of the namespace. (required)
+   * @param createTableRequest (required)
+   * @return Table properties result when loading a table (status code 200) or Indicates a bad
+   *     request error. It could be caused by an unexpected request body format or other forms of
+   *     request validation failure, such as invalid json. Usually serves application/json content,
+   *     although in some cases simple text/plain content might be returned by the server&#39;s
+   *     middleware. (status code 400) or Unauthorized. The request lacks valid authentication
+   *     credentials for the operation. (status code 401) or Forbidden. Authenticated user does not
+   *     have the necessary permissions. (status code 403) or Not Acceptable / Unsupported
+   *     Operation. The server does not support this operation. (status code 406) or The request
+   *     conflicts with the current state of the target resource. (status code 409) or The service
+   *     is not ready to handle the request. The client should wait and retry. The service may
+   *     additionally send a Retry-After header to indicate when to retry. (status code 503) or A
+   *     server-side problem that might not be addressable from the client side. Used for server 5xx
+   *     errors without more specific documentation in individual routes. (status code 5XX)
+   */
+  @Operation(
+      operationId = "createTable",
+      summary = "Create a table in the catalog",
+      description =
+          "Create a new Lance table in the catalog. There are three modes when trying to create a table: * CREATE: Create the table if it does not exist. If a table of the same name already exists, the operation fails with 400. * EXIST_OK: Create the table if it does not exist. If a table of the same name already exists, the operation succeeds and the existing table is kept. * OVERWRITE: Create the table if it does not exist. If a table of the same name already exists, the existing table and all data is dropped and a new table with this name with no data is created. The server might create the table using a library and writer version that is different from the one in the user environment. The server is responsible for rejecting the request if the table created by the server cannot be properly used by the client library and writer version. ",
+      tags = {"Table"},
+      responses = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "Table properties result when loading a table",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = GetTableResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "400",
+            description =
+                "Indicates a bad request error. It could be caused by an unexpected request body format or other forms of request validation failure, such as invalid json. Usually serves application/json content, although in some cases simple text/plain content might be returned by the server's middleware.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "401",
+            description =
+                "Unauthorized. The request lacks valid authentication credentials for the operation.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "403",
+            description = "Forbidden. Authenticated user does not have the necessary permissions.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "406",
+            description =
+                "Not Acceptable / Unsupported Operation. The server does not support this operation.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "409",
+            description = "The request conflicts with the current state of the target resource.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "503",
+            description =
+                "The service is not ready to handle the request. The client should wait and retry. The service may additionally send a Retry-After header to indicate when to retry.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            }),
+        @ApiResponse(
+            responseCode = "5XX",
+            description =
+                "A server-side problem that might not be addressable from the client side. Used for server 5xx errors without more specific documentation in individual routes.",
+            content = {
+              @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = ErrorResponse.class))
+            })
+      })
+  @RequestMapping(
+      method = RequestMethod.POST,
+      value = "/v1/namespaces/{ns}/tables",
+      produces = {"application/json"},
+      consumes = {"application/json"})
+  default ResponseEntity<GetTableResponse> createTable(
+      @Parameter(
+              name = "ns",
+              description = "The name of the namespace.",
+              required = true,
+              in = ParameterIn.PATH)
+          @PathVariable("ns")
+          String ns,
+      @Parameter(name = "CreateTableRequest", description = "", required = true) @Valid @RequestBody
+          CreateTableRequest createTableRequest) {
+    getRequest()
+        .ifPresent(
+            request -> {
+              for (MediaType mediaType : MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"name\" : \"name\", \"location\" : \"location\", \"properties\" : { \"key\" : \"properties\" } }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                  String exampleString =
+                      "{ \"instance\" : \"/login/log/abc123\", \"detail\" : \"Authentication failed due to incorrect username or password\", \"type\" : \"/errors/incorrect-user-pass\", \"title\" : \"Incorrect username or password\", \"status\" : 404 }";
+                  ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                  break;
+                }
+              }
+            });
+    return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
   }
 
   /**
